Added empty body model
